<resources>
    <string name="app_name">群测群防2.0</string>
    <string name="login_name">群测群防数据管理系统</string>
    <string name="endCall1">结束通话</string>
    <string name="update_base_url">http://www.cqdzjc.com:8090/meteor/</string>
    <string name="base_url">http://www.cqdzjc.com:8090/meteor/</string>
    <string name="local_base_url">http://192.168.10.89:8080/meteor/</string>
    <string name="permission_get_accounts_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_GET_ACCOUNTS</string>
    <string name="permission_read_phone_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_READ_PHONE_STATE</string>
    <string name="permission_call_phone_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_CALL_PHONE</string>
    <string name="permission_camera_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_CAMERA</string>
    <string name="permission_access_fine_location_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_ACCESS_FINE_LOCATION</string>
    <string name="permission_access_coarse_location_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_ACCESS_COARSE_LOCATION</string>
    <string name="permission_read_external_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_READ_EXTERNAL_STORAGE</string>
    <string name="permission_white_external_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_WRITE_EXTERNAL_STORAGE</string>
    <string name="permission_recode_audio_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_RECORD_AUDIO</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="edit">请输入...</string>
    <string name="mustInput">请输入(必填)...</string>
    <string name="save">保存</string>
    <string name="report">上传</string>
    <string name="videoRecording">应急调查视频录制</string>
    <string name="weeklyhint">1.巡查情况;\n2.监测工作情况;\n3.宣传培训情况;\n4.演练情况等</string>
</resources>
