<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.nandi.gsgdsecond.activity.WeeklyReportActivity">

    <include
        android:id="@+id/titleBar"
        layout="@layout/layout_titlebar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:orientation="vertical"
        android:layout_below="@+id/titleBar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:gravity="left"
                android:padding="10dp"
                android:text="乡镇名称："
                android:textSize="18sp" />

            <EditText
                android:id="@+id/et_townsName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:background="@null"
                android:hint="@string/edit"
                android:padding="5dp"
                android:textSize="16sp" />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.01dp"
            android:background="@color/dividerColor" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:gravity="left"
                android:padding="10dp"
                android:text="周报时间："
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_weeklyTime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:background="@null"
                android:padding="5dp"
                android:textSize="16sp" />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.01dp"
            android:background="@color/dividerColor" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:gravity="left"
                android:padding="10dp"
                android:text="片区负责人："
                android:textSize="18sp" />

            <EditText
                android:id="@+id/et_userName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:background="@null"
                android:hint="@string/edit"
                android:padding="5dp"
                android:textSize="16sp" />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.01dp"
            android:background="@color/dividerColor" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:padding="10dp"
                android:text="本周工作情况："
                android:textSize="18sp" />

            <EditText
                android:id="@+id/et_weeklyWork"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:background="@drawable/shape_report"
                android:gravity="left"
                android:hint="@string/weeklyhint"
                android:lines="8"
                android:paddingTop="8dp"
                android:paddingLeft="12dp"
                android:paddingRight="10dp"
                android:textSize="16sp" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btn_report"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/save_btn_selector"
        android:text="@string/report"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>