<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context="com.nandi.gsgdsecond.activity.DisReportActivity">

    <include
        android:id="@+id/titleBar"
        layout="@layout/layout_titlebar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/titleBar"
        android:layout_above="@id/btn_report">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                style="@style/myTextView"
                android:text="基础"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3.5"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:paddingLeft="18dp"
                    android:text="姓        名:"
                    android:textSize="18sp"/>

                <EditText
                    android:id="@+id/et_dis_recorder"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="7"
                    android:background="@null"
                    android:hint="@string/mustInput"
                    android:padding="5dp"
                    android:textSize="18sp" />
            </LinearLayout>
            <View
                style="@style/myView" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3.5"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:paddingLeft="18dp"
                    android:text="发生日期:"
                    android:textSize="18sp"/>

                <TextView
                    android:id="@+id/tv_dis_time"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="7"
                    android:padding="5dp"
                    android:text=""
                    android:hint="请选择(必选)..."
                    android:textSize="18sp" />
            </LinearLayout>
            <View
                style="@style/myView" />

            <GridView
                android:id="@+id/gv_photo"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginLeft="18dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:listSelector="@android:color/transparent"
                android:numColumns="4" >
            </GridView>

            <TextView
                style="@style/myTextView"
                android:text="地点"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3.5"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:paddingLeft="18dp"
                    android:text="乡/镇      :"
                    android:textSize="18sp"/>

                <EditText
                    android:id="@+id/et_dis_towns"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="7"
                    android:background="@null"
                    android:hint="@string/mustInput"
                    android:padding="5dp"
                    android:textSize="18sp" />
            </LinearLayout>
            <View
                style="@style/myView" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3.5"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:paddingLeft="18dp"
                    android:text="村            :"
                    android:textSize="18sp"/>

                <EditText
                    android:id="@+id/et_dis_village"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="7"
                    android:background="@null"
                    android:hint="@string/mustInput"
                    android:padding="5dp"
                    android:textSize="18sp" />
            </LinearLayout>
            <View
                style="@style/myView" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3.5"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:paddingLeft="18dp"
                    android:text="组            :"
                    android:textSize="18sp"/>

                <EditText
                    android:id="@+id/et_dis_group"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="7"
                    android:background="@null"
                    android:hint="@string/mustInput"
                    android:padding="5dp"
                    android:textSize="18sp" />
            </LinearLayout>

            <TextView
                style="@style/myTextView"
                android:text="灾情"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3.5"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:paddingLeft="18dp"
                    android:text="受灾人数:"
                    android:textSize="18sp"/>

                <EditText
                    android:id="@+id/et_dis_number"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="7"
                    android:background="@null"
                    android:hint="@string/edit"
                    android:inputType="number"
                    android:padding="5dp"
                    android:textSize="18sp" />
            </LinearLayout>
            <View
                style="@style/myView" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3.5"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:paddingLeft="18dp"
                    android:text="死亡人数:"
                    android:textSize="18sp"/>

                <EditText
                    android:id="@+id/et_dis_deathNum"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="7"
                    android:background="@null"
                    android:hint="@string/edit"
                    android:inputType="number"
                    android:padding="5dp"
                    android:textSize="18sp" />
            </LinearLayout>
            <View
                style="@style/myView" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3.5"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:paddingLeft="18dp"
                    android:text="失踪人数:"
                    android:textSize="18sp"/>

                <EditText
                    android:id="@+id/et_dis_missingNum"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="7"
                    android:background="@null"
                    android:hint="@string/edit"
                    android:inputType="number"
                    android:padding="5dp"
                    android:textSize="18sp" />
            </LinearLayout>
            <View
                style="@style/myView" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3.5"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:paddingLeft="18dp"
                    android:text="受伤人数:"
                    android:textSize="18sp"/>

                <EditText
                    android:id="@+id/et_dis_injuredNum"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="7"
                    android:background="@null"
                    android:hint="@string/edit"
                    android:inputType="number"
                    android:padding="5dp"
                    android:textSize="18sp" />
            </LinearLayout>

            <TextView
                style="@style/myTextView"
                android:text="险情"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3.5"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:paddingLeft="18dp"
                    android:text="潜在威胁:"
                    android:textSize="18sp"/>

                <EditText
                    android:id="@+id/et_dis_family"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:background="@drawable/shape_report"
                    android:padding="5dp"
                    android:layout_marginLeft="10dp"
                    android:inputType="number"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:paddingLeft="10dp"
                    android:text="户"
                    android:textSize="18sp"/>

                <EditText
                    android:id="@+id/et_dis_person"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:background="@drawable/shape_report"
                    android:padding="5dp"
                    android:inputType="number"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:paddingLeft="10dp"
                    android:text="人"
                    android:textSize="18sp"/>
            </LinearLayout>

            <TextView
                style="@style/myTextView"
                android:text="备注"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="18sp"
                android:paddingBottom="8dp"
                android:paddingRight="18dp"
                android:paddingTop="8dp"
                android:background="@color/white"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/et_dis_remarks"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_report"
                    android:gravity="left"
                    android:hint="@string/edit"
                    android:lines="5"
                    android:padding="8dp"
                    android:textSize="16sp" />
            </LinearLayout>
            <View
                style="@style/myView" />

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btn_report"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/upload_btn_selector"
        android:text="@string/report"
        android:textColor="@color/white"
        android:textSize="18sp"/>

</RelativeLayout>